--- a/config.json
+++ b/config.json
@@ -1,12 +1,22 @@
 {
+  "timeouts": {
+    "header_ms": 10000,
+    "body_ms": 30000,
+    "idle_keep_alive_ms": 60000
+  },
+  "limits": {
+    "max_header_bytes": 16384
+  },
   "servers": [
     {
+      "name": "main",
       "host": "127.0.0.1",
-      "ports": [8080, 8081],
+      "ports": [
+        8080,
+        8081
+      ],
       "default_server": true,
-
       "client_max_body_size": 1000000,
-
       "error_pages": {
         "400": "error_pages/400.html",
         "403": "error_pages/403.html",
@@ -15,39 +25,43 @@
         "413": "error_pages/413.html",
         "500": "error_pages/500.html"
       },
-
       "routes": [
         {
           "path": "/",
           "root": "www/html",
-          "methods": ["GET"],
+          "methods": [
+            "GET"
+          ],
           "index": "index.html",
           "directory_listing": false
         },
-
         {
           "path": "/upload",
           "root": "www/uploads",
-          "methods": ["POST"],
+          "methods": [
+            "POST"
+          ],
           "upload_dir": "www/uploads"
         },
-
         {
           "path": "/delete",
           "root": "www/uploads",
-          "methods": ["DELETE"]
+          "methods": [
+            "DELETE"
+          ]
         },
-
         {
           "path": "/cgi-bin",
           "root": "www/cgi-bin",
-          "methods": ["GET", "POST"],
+          "methods": [
+            "GET",
+            "POST"
+          ],
           "cgi": {
             "extension": ".py",
             "interpreter": "python3"
           }
         },
-
         {
           "path": "/old",
           "redirect": {
@@ -57,19 +71,21 @@
         }
       ]
     },
-
     {
+      "name": "admin",
       "host": "127.0.0.1",
-      "ports": [9090],
+      "ports": [
+        9090
+      ],
       "default_server": false,
-
       "client_max_body_size": 500000,
-
       "routes": [
         {
           "path": "/",
           "root": "www/admin",
-          "methods": ["GET"],
+          "methods": [
+            "GET"
+          ],
           "index": "dashboard.html",
           "directory_listing": true
         }
