skip server where have err

--- a/config.json
+++ b/config.json
@@ -95,7 +95,7 @@
             "routes": [
                 {
                     "path": "/",
-                    "root": "resources",
+                    "root": "templite",
                     "methods": [
                         "GET"
                     ],
