--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
                 8081,
                 9090
             ],
-            "default_server": true,
+            "default_server": false,
             "client_max_body_size": 10000000000,
             "error_pages": {
                 "400": "error_pages/400.html",
